ribbon 负载均衡和ribbon 属性配置分析完毕

--- a/ribbon-service-1/doc/ribbon/4-负载均衡器.md
+++ b/ribbon-service-1/doc/ribbon/4-负载均衡器.md
@@ -479,7 +479,7 @@ ZoneAwareLoadBalancer 负载均衡器扩展了服务实例清单的实现。
                     
                     // 并调用 chooseServer 来选择具体的服务实例
                     // 在 chooseServer 中将使用 IRule 接口的 choose 函数来选择具体的服务实例
-                    // 在这里，IRule 接口的实现会使用 ZoneAvoidanceRule 来挑选出具体的服务实例.
+                    // 在这里，IRule 接口的实现会使用 ZoneAvoidanceRule 来挑选出具体的服务实例
                     server = zoneLoadBalancer.chooseServer(key);
                 }
             }
