--- a/ribbon-service-1/doc/hytstrix/3-断路器原理.md
+++ b/ribbon-service-1/doc/hytstrix/3-断路器原理.md
@@ -1,11 +1,16 @@
-###hystrix 如何决策熔断和记录信息呢？
+### hystrix 断路器是如何决策熔断和记录信息的呢？
+
+### 先来看看断路器 HystrixCircuitBreaker 的定义
 ```
 public interface HystrixCircuitBreaker {
-
+    
+    //每个hystrix 命令的请求都通过它判断是否被执行
     public boolean allowRequest();
    
+   //返回当前断路器是否打开
     public boolean isOpen();
 
+   //用来闭合断路器
     void markSuccess();
 
     public static class Factory {
@@ -15,25 +20,34 @@ public interface HystrixCircuitBreaker {
     
     static class NoOpCircuitBreaker implements HystrixCircuitBreaker{}
     
+    // 在该类中定义了断路器的4个核心对象
     static class HystrixCircuitBreakerImpl implements HystrixCircuitBreaker {
     
-    private final HystrixCommandProperties properties;//HystrixCommand实例的属性 
-    private final HystrixCommandMetrics metrics; //HystrixCommand记录各类度量指标
-    private AtomicBoolean circuitOpen = new AtomicBoolean(false);//断路器是否打开
-    private AtomicLong circuitOpenedOrLastTestedTime = new AtomicLong();//断器路打开时的时间戳
+    // HystrixCommand 实例的属性 
+    private final HystrixCommandProperties properties;
+   
+    //HystrixCommand 记录各类度量指标
+    private final HystrixCommandMetrics metrics;
+    
+    // 断路器是否打开的标志，默认为false
+    private AtomicBoolean circuitOpen = new AtomicBoolean(false);
+   
+    //断路器打开或是上一次测试的时间戳
+    private AtomicLong circuitOpenedOrLastTestedTime = new AtomicLong();
     
     }
  }
 ```
+- 静态类 Factory 维护 hystrix 与 HystrixCircuitBreaker 的关系集合:ConcurrentHashMap<String, HystrixCircuitBreaker> circuitBreakersByCommand,
+  其中 String 类型的 key 通过 HystrixCommandKey 定义,每一个Hystrix命令需要有一个key来标识,同时一个 Hystrix 命令也会在该集合中
+  找到它对应的断路器 HystrixCircuitBreaker 实例。
+  
+- 静态类 NoOpCircuitBreaker 它允许所有请求并且断路器状态始终闭合
+- 静态类 HystrixCircuitBreakerImpl 是断路器接口 HystrixCircuitBreaker 的实现类，在该类中定义了断路器的4个核心对象。
 
-- allowRequest() 每个hystrix 命令的请求都通过它判断是否被执行
-- isOpen() 返回当前断路器是否打开
-- markSuccess() 用来闭合断路器
-- Factory 维护 hystrix 与HystrixCircuitBreaker的关系，key通过HystrixCommandKey定义
-- NoOpCircuitBreaker 断路器始终闭合
-- HystrixCircuitBreakerImpl 断路器实现
 
-####isOpen() 判断断路器的打开或关闭状态
+### HystrixCircuitBreakerImpl 对 HystrixCircuitBreaker 接口的各个方法实现如下：
+#### isOpen() 判断断路器的打开或关闭状态
 ```
 @Override
         public boolean isOpen() {
@@ -56,13 +70,15 @@ public interface HystrixCircuitBreaker {
             }
         }
 ```
-- 如果断路器打开，则直接返回true,否则通过 HealthCounts 统计对象做进一步的判断，
+- 如果断路器打开，则直接返回true,否则就从度量指标对象 metrics 中获取 HealthCounts 统计对象做进一步的判断，
 该对象记录了一个滚动时间窗内的请求信息快照，默认时间窗为10秒
 
-- QPS :即每秒的响应请求数，也即是最大吞吐能力。
+>滚动时间窗:比如：时间窗为10s，那么第一个窗体包含的是 0s到10s的数据，第二个窗口包含 10s到20s的数据，
+第三个窗口包含 20s 到 30s 的数据，窗口与窗口没有重叠。
 
 - 如果它的请求总数(QPS) 在预设的阈值范围内就返回false,表示断路器处于未打开状态，
   该阈值参数为 circuitBreakerRequestVolumeThreshold 默认值为20
+>QPS :即每秒的响应请求数，也即是最大吞吐能力。  
     
 - 如果错误百分比在阈值范围内就返回false,表示断路器处于未打开状态，
   该阈值参数为 circuitBreakerErrorThresholdPercentage 默认值为 50
@@ -73,17 +89,22 @@ public interface HystrixCircuitBreaker {
 就将当前时间记录到 circuitOpenedOrLastTestedTime 对象中
 
 - allowRequest() 判断请求是否被允许
+> 先根据配置 对象 properties 中的断路器判断强制打开或关闭 属性是否被设置,如果强制打开，就直接返回false,拒绝请求,
+如果强制关闭，它会允许所有请求，但是同时也会调用 isOpen () 来执行断路器的计算逻辑，用来模拟断路器打开／关闭的行为.
+而是通过 !isOpen() || allowSingleTest() 来判断是否允许请求访问
+
 ```
      @Override
         public boolean allowRequest() {
             if (properties.circuitBreakerForceOpen().get()) {  //断路器强制打开           
                 return false; //拒绝请求
             }
-            if (properties.circuitBreakerForceClosed().get()) {              
+            if (properties.circuitBreakerForceClosed().get()) { //断路器强制关闭                
                 isOpen();              
                 return true;
             }
             
+            // 这两个配合使用 就能 实现了 断路器打开 和 关闭状态 的切换
             return !isOpen() || allowSingleTest();
         }
 
@@ -91,15 +112,17 @@ public interface HystrixCircuitBreaker {
      public boolean allowSingleTest() {
             long timeCircuitOpenedOrWasLastTested = circuitOpenedOrLastTestedTime.get();
             
-            //当断路器打开时，会判断 断开时的时间戳 + 配置中的时间是否小于当前时间 
+            // isOpen() 函数中 当断路器从闭合到打开时候所记录的时间戳
+            //当断路器打开时，会判断 断开时的时间戳 + 配置中的 circuitBreakerSleepWindowInMilliseconds 时间是否小于当前时间 
             if (circuitOpen.get() && System.currentTimeMillis() 
             > timeCircuitOpenedOrWasLastTested + properties.circuitBreakerSleepWindowInMilliseconds().get()) {               
                 
-                //将当前时间记录更新到 记录断路器打开的时间对象 circuitOpenedOrLastTestedTime 中并且允许此次请求
+                //是的话，就将当前时间更新到记录断路器打开的时间对象 circuitOpenedOrLastTestedTime 中,并且允许此次请求
                 
-                //通过 circuitBreakerSleepWindowInMilliseconds 参数设置了一个断路器打开之后的休眠时间 默认5秒
+                //简单地说, 通过 circuitBreakerSleepWindowInMilliseconds 参数设置了一个断路器打开之后的休眠时间 默认5秒
                 
                 //在该休眠时间到达之后，将再次允许请求尝试访问，此时断器处于 半开 状态，若此时请求继续失败，断路器又进入打开状态
+                // 并继续等待下一个休眠窗口过去之后再次尝试,若请求成功，则将断路器重新置于关闭状态
                                 
                 if (circuitOpenedOrLastTestedTime.compareAndSet(timeCircuitOpenedOrWasLastTested, System.currentTimeMillis())) {                    
                     return true;
@@ -109,7 +132,7 @@ public interface HystrixCircuitBreaker {
         }
 ```
 
-- markSuccess() 用于在 半开路 状态时，若 hystrix 命令调用成功，通过调用它将打开的断器关闭，并重置度量指标对象
+- markSuccess() 该函数用来在 半开路 状态时使用，若 hystrix 命令调用成功，通过调用它将打开的断器关闭，并重置度量指标对象
 ```
     public void markSuccess() {
             if (circuitOpen.get()) {
@@ -121,34 +144,45 @@ public interface HystrixCircuitBreaker {
 ```
 
 
-###断路器的详细执行逻辑
+### 断路器的详细执行逻辑
+
 ![img_text](./img/断路器逻辑.png)
 
-####依赖隔离 指服务的依赖隔离
+### 依赖隔离 指服务的依赖隔离
+
 docker 通过 舱壁模式，实现进程的隔离，使得容器与容器之间不会互相影响
 
 hystrix 则使用该模式实现线程池的隔离，它会为每一个依赖服务创建一个独立的线程池，这样就算某个依赖服务出现延迟过高的情况，也只是对该
 服务的调用产生影响，而不会拖慢其他的依赖服务
 
-#### hystrix 性指测试
-命令以每秒60 个请求的速度（QPS）对单一个服务实例进行访问，该服务实例每秒运行的线程数峰值为 350个
+### 通过实现对依赖服务的线程池隔离，可以带来如下优势
+- 应用自身得到完全保护，不会受不可控的依赖服务影响
+- 可以有效降低接入新服务的风险
+- 通过实时动态刷新自身应用对依赖服务的阙值进行调整以适应依赖方的改变
+- 每个专有线程池都提供了内置的并发实现，可以利用它为同步的依赖服务构建异步访问
+- 通过对依赖服务实现线程池隔离，可让我们的应用更加健壮
+- 可以在不停止服务的情况下，配合动态配置刷新实现 性能配置上的调整
+
+### hystrix 性指测试
+以每秒60 个请求的速度（QPS）对单一个服务实例进行访问，该服务实例每秒运行的线程数峰值为 350个
 99%的情况下，使用线程池隔离的延迟有9ms
 
-#### 信号量
+### 信号量
 hystrix 除了可使用线程池，还可以命命使用信号量来控制单个依赖服务的并发度，信号量的开销远比线程池的开销小，
-但是它不能设置 超时 和实现 异步 访问
-- 隔离策略参数：execution.isolation.strategy   THREAD 线程池 SEMAPHORE 信号量
-- 信号量的默认值为 10，可以动态刷新配置方式来控制并发线程的数量
-- 请求耗时在 1ms 以内，性能可达到 5000rps(rps指每秒的请求数)，可以将信息号设置为 1 或 2
+但是它不能设置 超时 和 实现 异步 访问
 
-#### 不用实现降级逻辑
-- 执行写操作的命令,因为通常情况下，这类操作的返回类型是 void 
+- 隔离策略参数：execution.isolation.strategy   THREAD 线程池 SEMAPHORE 信号量
+
+> 信号量的默认值为 10，可以动态刷新配置方式来控制并发线程的数量
+> 请求耗时在 1ms 以内，性能可达到 5000rps(rps指每秒的请求数)，可以将信息号设置为 1 或 2
+
+### 不用实现降级逻辑
+- 返回类型是 void 
 - 执行批处理或离线计算命令 
 
-#### 不论hystrix命令是否实现了服务降级，命令状态和断路器状态都会更新
+### 不论hystrix命令是否实现了服务降级，命令状态和断路器状态都会更新
 
-
-#### 断路器是否打开 相关逻辑判断
+### 断路器是否打开 相关逻辑判断
 ```
 /**
      * Whether the 'circuit-breaker' is open meaning that <code>execute()</code> will immediately return
