feign 学习记录完毕

--- a/feign-service-1/doc/feign/2-属性相关配置.md
+++ b/feign-service-1/doc/feign/2-属性相关配置.md
@@ -39,7 +39,7 @@ HELLO-SERVICE-1.ribbon.ConnectTimeout=5000
 
 通过 LoadBalancerFeignClient#execute 方法，查看 ribbon 客户端的相关属性配置
 
-#### feign 重试
+#### feign 重试机制
 
 ```
 #### 当有下面两个配置时， 共打印 8 次日志，因为 首次 + 3 = 4 说明切换 4 次实例， 每次对当前实例重试 首次+1=2 因此共 4*2=8 条
@@ -104,3 +104,21 @@ FeignLoadBalancer 中的 getRequestSpecificRetryHandler 方法返回 RequestSpec
 
 > Ribbon的超时与Hystrix的超时是两个概念，我们需要让Hystrix的超时时间大于Ribbon的超时时间，否则Hystrix命令超时后，
 命令直接熔断， 重试机制 就没有任何意义了
+
+
+
+### feign 客户端 不使用eureka上的服务信息（ip：port）调用接口
+> 该 feign 客户端 注册到 eureka上，但是不使用 eureka 上的服务 ip:port 调用接口
+
+1. 禁用eureka   
+ribbon.eureka.enabled=false
+
+2. 自定义指定服务的 服务器列表，如果是域名的话使用 （域名：80）的形式  
+HELLO-SERVICE-1.ribbon.listOfServers=10.12.141.146:18081
+
+
+### feign 日志级别 Logger.Level
+- none ：不记录任何信息
+- basic ：仅记录请求方法、URL以及响应状态码和执行时间
+- headres : 除了记录BASIC级别的信息之外，还会记录请求和响应的头信息
+- full :记 录所有请求与响应的明细，包括头信息、请求体、元数据等
